MDEV-7144 Warnings "bytes lost" during server shutdown after running connect.part_file test in buildbot